# shopify-headless

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Taskfile.yml  Taskfile.yml.example  clippy.toml  cog.toml  deny.toml
crates/admin/: BRAND_IDENTITY.md  Cargo.toml  README.md  askama.toml
crates/admin/.sqlx/: query-0300c0279cb81978468d139beeb8c8acb56074c53515cb881d59461cc186d876.json  query-07a913bd9309db8325a122871303fe41997949fff5f62d3c2ce96307ac549198.json  query-0ee2550acd95669da641f65b28a5a770bc1de33f3b9f4e5d21ad4817f554eb43.json  query-0ee9ded09f1442eb49088bcdad79cd265b1149ba6202993c8e32dd8bc60faadd.json  query-10fab6a40b66d2cd6953b7cf54720632d5f41e658ccf5568e1018e3a0ec7a2c9.json  query-12c98a6a779fc4cb0e65552d874c748287a68126f1e1b2738ad855996b66fbff.json  query-14db6a3497805cc674426d867cc9f1a90ac67117c19f2478923542c6d959fd3c.json  query-15dec5660c10537bd140fef2beee176908ef219cc2eccbcbf20d6cc60b67d6d9.json  query-16404faae2c6c4f768c4b532f5fe42bb1fce4b03a49dc291ad5487cf10fce9ce.json  query-16c9e6249ae0c245da7ae62a8ec4c985795b555fbf5b57c3a0e95beef0d27f65.json  query-1a243c525939b93c09136b28234737435d0e1d1d4600d85592f3f33fb0d7a763.json  query-1b61800e7f04e6c68f69114bc941299a1e54ed87542183ac235f1dd5358a1ea6.json  query-1d8380c5986edcbc28d4c049fe1528e3139e5a8a1ab15c04b9f0ac3c7dcf0d17.json  query-1f002bc81e4973a46ae2d1949f67006d7c8eaf39fd85bb0585bb6232e6b50214.json  query-256e604e2062f7fc0ef973109b341cbdf486180f55256c16d13c614086cef8a2.json  query-25f3a6ece18accd5b39169518f78a656affc330d7bfa2390d2c9da4425392c30.json  query-27d5ff28c1ded1068f66e80178958d69d8549a664227d2458e8cb2b1cc51c8e6.json  query-286d855b48ed72f69170a0ac7eb3546ac07bac540c0a606b817e29693cc69e0c.json  query-2b3ba74e668d7b3e13c7a41f996801f378461b15a02554259ba301f883bb6f16.json  query-2cdd9c2aa6b3e301aa07b3fd83dc51ab7229d1ca84fb1f7b049d78b9446d06e8.json  query-34702161299e2deefc8e02bc3e56ba08cdb7de451866a6c036c569e44f8b95b4.json  query-360050fb4eff482dd451c89b25ec784914b68cd8ee818883f23c829d2f0b1ade.json  query-36c16c131b3794eac0cafc45f30accf233d94376b095e450da1f90fbaaded9ed.json  query-37579f0037e45758efe14032081fa4d71b34dc7d0e96645fed93ac3a6715531d.json  query-3e987e6ab28378e7d80f62cc1d09d74f2137871886747ee354910ceb03b9b5a3.json  query-40dbd037e5bf341b6c9bcf5090e3b746ea1dcaaff387ad28e24ec637b185383b.json  query-4151970807244fcd861a7362f8799db2a89dd8c1fa58025b944b83ea3314480b.json  query-433a950efd829c661d3cbef3966ccb72bba312e849fde2c1a9eab86cf5baf944.json  query-4643783871654109d1adbf0045e73f5d17307b107b429cdad753039b360b5333.json  query-4823b0e3881059ad50715b8a6d96d1789e6ef44b4c4f8de33cab386418abefb9.json  query-49fce53cc9a85a956d9a15dad63508fefb34cdda48da9ae768b6510e0b97bd4d.json  query-516e65cb0d06004d1606e5b310956528d6eff6b83217f35e701ceca09bea11fe.json  query-52722a015818e45c95924a425aba9723b4a411cd2b47bb47d11a13e8bc5c3746.json  query-52a48522dcc84480ee17f7fb59ca20a8b81d701842fce02a434de40fbd5b1239.json  query-54834f42641461ac66a454fa63864f648c35be11d17053675072d9315c309ba4.json  query-57467aae581e54dac9a7dfcbf5f929f4ba4a429cb614057fa061512f7bbe6efc.json  query-589c1c308d2b543f459f08221dad903a334780c6486c288f6da1c75cb9342e3b.json  query-59ac37d73034425044d58042832c0a2b7383c94cb328a9a3c72abea83903c87c.json  query-5b9e2b03399cce79eab9a6324459df0d5db5cf6558f045e046e250056198e3d2.json  query-5d9a794e89cb0ab786848cd4a8a0e3e8cd10066870478459fbe69379ec500234.json  (+61 more)
crates/admin/data/: tool_examples.yaml
crates/admin/migrations/: 20260124000001_create_admin_users.down.sql  20260124000001_create_admin_users.up.sql  20260124000002_create_admin_credentials.down.sql  20260124000002_create_admin_credentials.up.sql  20260124000003_create_chat_sessions.down.sql  20260124000003_create_chat_sessions.up.sql  20260124000004_create_chat_messages.down.sql  20260124000004_create_chat_messages.up.sql  20260124000005_create_settings.down.sql  20260124000005_create_settings.up.sql  20260125000001_create_admin_auth.down.sql  20260125000001_create_admin_auth.up.sql  20260125000002_create_shopify_tokens.down.sql  20260125000002_create_shopify_tokens.up.sql  20260127000001_create_admin_invites.down.sql  20260127000001_create_admin_invites.up.sql  20260128000001_admin_user_preferences.down.sql  20260128000001_admin_user_preferences.up.sql  20260128000002_add_webauthn_user_id.down.sql  20260128000002_add_webauthn_user_id.up.sql  20260129000001_add_chat_ai_features.down.sql  20260129000001_add_chat_ai_features.up.sql  20260130000001_add_slack_user_id.down.sql  20260130000001_add_slack_user_id.up.sql  20260131000001_create_manufacturing_batch.down.sql  20260131000001_create_manufacturing_batch.up.sql  20260131000002_create_batch_metadata.down.sql  20260131000002_create_batch_metadata.up.sql  20260131000003_create_inventory_lot.down.sql  20260131000003_create_inventory_lot.up.sql  20260131000004_create_lot_allocation.down.sql  20260131000004_create_lot_allocation.up.sql  20260131000005_create_shiphero_credentials.down.sql  20260131000005_create_shiphero_credentials.up.sql
crates/admin/src/: config.rs  error.rs  filters.rs  lib.rs  main.rs  state.rs
crates/admin/templates/: dashboard.html
crates/cli/: Cargo.toml  README.md
crates/cli/.sqlx/: query-28d7f3a76973f0e3944215b9913cdbc9d757bfb55e00d6202e09a58541250b08.json  query-3dee5a0cd872fac81b1af8402aac20a7f541dedafb404a23914d2da2bb124122.json  query-5a2a2d377273fc0b3cb6652d27c2f4899f61fb4afc7b76227f0790a2920294cd.json  query-66c71a35dfcd88ee21c02474c2fd28e5bd381aaf68cda13355bcccfcc9c427f9.json
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/integration-tests/: Cargo.toml  README.md
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: admin_action_queue.rs  admin_customers.rs  admin_slack_messages.rs  admin_tool_selection.rs
crates/storefront/: BRAND_IDENTITY.md  Cargo.toml  README.md  build.rs  tailwind.config.js
crates/storefront/.sqlx/: query-178c9f16c1a9c6318ff82be1e1f11a1a13905ed0ccf8558ec4a4703b87290b7b.json  (+18 more)
crates/storefront/src/: config.rs  content.rs  error.rs  (+5 more)
(+492 files in other folders)
