[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/storefront",
    "crates/admin",
    "crates/cli",
    "crates/integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Adam Walz <adam@pistachiohq.com>"]
repository = "https://github.com/PistachioHQ/NakedPineapple"

[workspace.lints.rust]
# unsafe_code is handled per-crate via #![cfg_attr(not(test), forbid(unsafe_code))]
# This allows tests to use unsafe (e.g., env::set_var) while forbidding it in production
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Restriction lints (cherry-picked for production)
dbg_macro = "warn"
indexing_slicing = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"

# Allowed lints
multiple-crate-versions = "allow" # handled by Cargo-deny

[workspace.dependencies]
# Internal crates
naked-pineapple-core = { path = "crates/core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "normalize-path", "set-header"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Templating
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }

# GraphQL client
# NOTE: reqwest feature uses old reqwest 0.11-0.12; use graphql_client for codegen,
# make HTTP requests with reqwest 0.13+ directly to avoid unmaintained deps
graphql_client = "0.16"
reqwest = { version = "0.13", features = ["json", "stream", "form"] }

# Auth
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
webauthn-rs-proto = "0.5"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }

# Error tracking
sentry = { version = "0.46", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tracing", "tower", "tower-http"] }
sentry-tower = { version = "0.46", features = ["http"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
dotenvy = "0.15"
url = "2"
base64 = "0.22"
rand = "0.9"

# Caching
moka = { version = "0.12", features = ["future"] }

# Security
secrecy = "0.10"
