[package]
name = "naked-pineapple-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Internal admin binary for Naked Pineapple (port 3001, Tailscale-only)"
readme = "README.md"
keywords = ["ecommerce", "admin", "shopify", "axum"]
categories = ["web-programming::http-server"]
publish = false

[[bin]]
name = "naked-pineapple-admin"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
naked-pineapple-core = { workspace = true }

# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Templating
askama = { workspace = true }
askama_web = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# GraphQL client
graphql_client = { workspace = true }
reqwest = { workspace = true }

# Auth
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }

# Error tracking
sentry = { workspace = true }
sentry-tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
dotenvy = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
