[package]
name = "naked-pineapple-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types library for Naked Pineapple"
readme = "README.md"
keywords = ["ecommerce", "types", "shopify"]
categories = ["data-structures"]
publish = false

[lints]
workspace = true

[features]
default = []
postgres = ["sqlx"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# Optional: Database support
sqlx = { workspace = true, optional = true }
