[package]
name = "naked-pineapple-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Integration tests for Naked Pineapple"
readme = "README.md"
keywords = ["testing", "integration"]
categories = ["development-tools::testing"]
publish = false

[lints]
workspace = true

[dependencies]
naked-pineapple-core = { workspace = true }
naked-pineapple-admin = { path = "../admin" }

# Testing
tokio = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
sqlx = { workspace = true }
uuid = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Security
secrecy = { workspace = true }
